fixed sm-main top margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ div.sm-play img{
         font-size: 1rem;
     }
     div.sm-main{
-        margin-top: 2rem;
+        margin-top: 1rem;
     }
 }
 @media screen and (max-width: 375px) {
